--- a/ci/build-all-steps.yml
+++ b/ci/build-all-steps.yml
@@ -15,6 +15,9 @@ steps:
     displayName: Start collect diagnostics
     condition: and(succeeded(), eq(variables.collect_diagnostics, 'true'))
 
+# Verify min agent version demands
+- script: npm run verifyMinAgentDemands
+
 # Use node 8, npm 5
 - task: NodeTool@0
   displayName: Use node 8
